--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -50,13 +50,11 @@
     </nav>
     {% block content %}
     {% endblock content %}
-    <footer style="background: #212529;color: rgb(36,40,43);">
-        <footer class="text-center">
+    <footer class="text-center" style="background: #212529;color: rgb(36,40,43);">
             <div class="container text-muted py-4 py-lg-5">
                 <p class="mb-0" style="color: white;">LivinnX Amenity Booker Admin Panel </p>
                 <p class="mb-0" style="color: white;">Copyright © 2023 Igor Sokół </p>
             </div>
-        </footer>
     </footer>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/aos.min.js' %}"></script>
