--- a/templates/management/admin_tenant_search.html
+++ b/templates/management/admin_tenant_search.html
@@ -8,8 +8,8 @@
         background: linear-gradient(45deg, #0869a0, #4682b4, #87cefa, #063970, #154c79);
         background-size: 200% 200%;
         animation: Gradient 40s ease infinite;
-        }
-        @keyframes Gradient {
+    }
+    @keyframes Gradient {
         0% {
             background-position: 0% 50%;
         }
@@ -19,7 +19,7 @@
         100% {
             background-position: 0% 50%;
         }
-        }
+    }
 </style>
 <div class="row justify-content-center" style="margin-top:150px;">
     <div class="col-xl-10 col-xxl-9">
@@ -27,8 +27,15 @@
             <div class="card-header d-flex flex-wrap justify-content-center align-items-center justify-content-sm-between gap-3">
                 <h5 class="display-6 text-nowrap text-capitalize mb-0" style="font-family: 'Bebas Neue', serif;">All users</h5>
                 <div class="input-group input-group-sm w-auto">
-                    <button class="btn" style="font-size: 17px;" onclick="location.href='{% url 'tenant_search' %}'" type="button">
-                        Search</button>
+                    <form method="get">
+                        {{ form.query }}
+                        <button class="btn btn-outline-primary btn-sm" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-search mb-1">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+                            </svg>
+                        </button>
+                    </form>
+                    
                 </div>
             </div>
             <div class="card-body">
@@ -43,12 +50,18 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for user in users %}
+                            {% for user in results %}
                             <tr>
-                                <td class="text-truncate" style="max-width: 200px;">{{ user.user.first_name }} {{ user.user.last_name }}</td>
-                                <td class="text-truncate" style="max-width: 200px;">{{ user.user.email }}</td>
+                                <td class="text-truncate" style="max-width: 200px;">
+                                    {{ user.first_name }} {{ user.last_name }}
+                                </td>
+                                <td class="text-truncate" style="max-width: 200px;">
+                                    {{ user.email }}
+                                </td>
                                 <td>
-                                    <button class="btn btn-outline-primary btn-sm toggle-active" data-user-id="{{ user.id }}" data-url="{% url 'toggle_user_active' user.id %}">
+                                    <button class="btn btn-outline-primary btn-sm toggle-active"
+                                            data-user-id="{{ user.id }}"
+                                            data-url="{% url 'toggle_user_active' user.id %}">
                                         {% if user.active %}
                                             Deactivate
                                         {% else %}
@@ -57,7 +70,7 @@
                                     </button>
                                 </td>
                                 <td class="text-center">
-                                    <a href="{% url 'admin_tenant_profile' user_id=user.id name=user.user.first_name surname=user.user.last_name %}">
+                                    <a href="{% url 'admin_tenant_profile' user_id=user.id name=user.first_name surname=user.last_name %}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-eye-fill fs-5 text-primary">
                                             <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
                                             <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
@@ -65,6 +78,10 @@
                                     </a>
                                 </td>
                             </tr>
+                            {% empty %}
+                                <tr>
+                                    <td colspan="4">No results found</td>
+                                </tr>
                             {% endfor %}
                         </tbody>
                     </table>
