--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -33,6 +33,7 @@
                 <h2 style="color: rgb(255,255,255);font-family: 'Bebas Neue', serif; margin-bottom: 0px!important;">Amenity Booker | Admin panel</h2>
                 <ul class="navbar-nav ms-auto">
                     {% if request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link link-light" href="/wagtail-admin/blog/post/create/" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Add Post</a></li>
                     <li class="nav-item"><a class="nav-link link-light" href="{% url 'admin_tenants' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Tenants</a></li>
                     {% if section == "profile" %}
                     <li class="nav-item"><a class="nav-link link-light" href="{% url 'admin_dashboard' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;color: #51abac!important;">Dashboard</a></li>
